--- a/src/app/Modules/formation/crud/crud.component.html
+++ b/src/app/Modules/formation/crud/crud.component.html
@@ -1,3 +1,38 @@
-<p>
-  crud works!
-</p>
+<div class="card">
+  <div class="card-body">
+    <form [formGroup]="angForm" novalidate>
+      <div class="form-group">
+        <label class="col-md-4">nameFormation</label>
+        <input type="text" class="form-control" formControlName="nameFormation" #nameFormation />
+      </div>
+      <div *ngIf="angForm.controls['nameFormation'].invalid && (angForm.controls['nameFormation'].dirty || angForm.controls['nameFormation'].touched)" class="alert alert-danger">
+        <div *ngIf="angForm.controls['nameFormation'].errors.required">
+          name Formation is required.
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-md-4">type </label>
+        <input type="text" class="form-control" formControlName="type" #type/>
+      </div>
+      <div *ngIf="angForm.controls['type'].invalid && (angForm.controls['type'].dirty || angForm.controls['type'].touched)" class="alert alert-danger">
+        <div *ngIf="angForm.controls['type'].errors.required">
+          type Business is required.
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-md-4">nb </label>
+        <input type="text" class="form-control" formControlName="nb" #nb />
+      </div>
+      <div *ngIf="angForm.controls['nb'].invalid && (angForm.controls['nb'].dirty || angForm.controls['nb'].touched)" class="alert alert-danger">
+        <div *ngIf="angForm.controls['nb'].errors.required">
+         nb is required.
+        </div>
+      </div>
+      <div class="form-group">
+        <button (click)="addBusiness(nameFormation.value, type.value, nb.value)"
+        [disabled]="angForm.pristine || angForm.invalid"
+        class="btn btn-primary">Add Formation</button>
+      </div>
+    </form>
+  </div>
+</div>
