--- a/src/app/Modules/auth/register/register.component.html
+++ b/src/app/Modules/auth/register/register.component.html
@@ -1,6 +1,12 @@
 <h2>Register</h2>
-<form>
+<form (submit)="onRegisterSubmit">
   <div class="form-group">
-    <label>Name</label>
+    <label>Email</label>
+    <input type="text" [(ngModel)]="email" name="email" class="form-control">
   </div>
+  <div class="form-group">
+    <label>Password</label>
+    <input type="password" [(ngModel)]="password" name="password" class="form-control">
+  </div>
+  <input type="submit" class="btn btn-primary" value="Submit">
 </form>
