--- a/src/app/Modules/auth/register/register.component.html
+++ b/src/app/Modules/auth/register/register.component.html
@@ -1,2 +1,64 @@
- 
+
+<br>
+<br>
+<br>
+<br>
+
+<div class="top-content">
+    <div class="container">
+       
+        
+        <div class="row">
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 form-box">
+                <form role="form" action="" method="post" class="f1">
+
+                    <h3>Register To Our App</h3>
+                    <br>
+                    
+                    <fieldset>
+                        <h4>Tell us who you are:</h4>
+                        <br>
+                        <div class="form-group">
+                            <label>First name</label>
+                            <input type="text" name="f1-first-name" placeholder="First name..." class="f1-first-name form-control" id="f1-first-name">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="f1-last-name">Last name</label>
+                            <input type="text" name="f1-last-name" placeholder="Last name..." class="f1-last-name form-control" id="f1-last-name">
+                        </div>
+                       
+                    </fieldset>
+
+                    <fieldset>
+                        <h4>Set up your account:</h4>
+                        <div class="form-group">
+                            <label class="sr-only" for="f1-email">Email</label>
+                            <input type="text" name="f1-email" placeholder="Email..." class="f1-email form-control" id="f1-email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="f1-password">Password</label>
+                            <input type="password" name="f1-password" placeholder="Password..." class="f1-password form-control" id="f1-password">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="f1-repeat-password">Repeat password</label>
+                            <input type="password" name="f1-repeat-password" placeholder="Repeat password..." 
+                                                class="f1-repeat-password form-control" id="f1-repeat-password">
+                        </div>
+        
+                    </fieldset>
+
+                    <fieldset>
+    
+                            <button type="submit" class="button" style="vertical-align:middle"><span>S'inscrire</span></button>
+                        
+                    </fieldset>
+                
+                </form>
+            </div>
+        </div>
+        </div>
+        </div>
+        
+            
+
  
