--- a/src/app/Modules/auth/login/login.component.html
+++ b/src/app/Modules/auth/login/login.component.html
@@ -4,37 +4,19 @@
 <br>
 <br>
 
-<div class="top-content">
-    <div class="container">
-       
-        
-        <div class="row">
-            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 form-box">
-                <form role="form" action="" method="post" class="f1">
-
-                    <h3>Login</h3>
-                  
-                    
-                    <fieldset>
-                        <h4>Tell us who you are:</h4>
-                        <br>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="text" name="f1-first-name" placeholder="Email..." class="f1-first-name form-control" id="f1-first-name">
-                        </div>
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input type="text" name="f1-last-name" placeholder="Password..." class="f1-last-name form-control" id="f1-last-name">
-                        </div>
-                       
-                    </fieldset>
-                    
-    
-                        <button type="submit" class="button" style="vertical-align:middle"><span>Se connecter</span></button>
+<h4 *ngIf="error">{{error}}</h4>
+<form #registerForm="ngForm" (ngSubmit)="register(user)">
+  <div class="form-group col-3">
+    <label for="email">Email</label>
+    <input type="text" name="email" class="form-control" [(ngModel)]="user.email" />
+  </div>
+  <div class="form-group col-3">
+    <label for="password">Password</label>
+    <input type="password" name="password" class="form-control" [(ngModel)]="user.password" />
+  </div>
+  <div class="form-group col-3">
+        <button type="submit" class="button" style="vertical-align:middle"><span>Se connecter</span></button>
+  </div>
+</form>
                     
                    
-                    </form>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
